@@ -1,13 +1,21 @@
 package dk.digitalidentity.rc.security;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
+import dk.digitalidentity.rc.dao.model.PostponedConstraint;
+import dk.digitalidentity.rc.dao.model.SystemRole;
+import dk.digitalidentity.rc.dao.model.UserUserRoleAssignment;
+import dk.digitalidentity.rc.service.model.RoleAssignedToUserDTO;
+import dk.digitalidentity.rc.service.model.UserWithRole;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -33,13 +41,12 @@ public class AccessConstraintService {
 
 	@Autowired
 	private OrgUnitService orgUnitService;
-	
+
 	@Autowired
 	private ItSystemService itSystemService;
-	
+
 	/***
 	 * Returns a list of OrgUnits that this is constrained to.
-	 * 
 	 * null -> no constraints
 	 * empty list -> fully constrained, not allowed access
 	 */
@@ -55,7 +62,7 @@ public class AccessConstraintService {
 		if (user == null) {
 			return new ArrayList<String>(); // empty list, full restriction
 		}
-		
+
 		List<ItSystem> itSystems = itSystemService.findByIdentifier(Constants.ROLE_CATALOGUE_IDENTIFIER);
 
 		// get all roles, and start analyzing the data
@@ -72,6 +79,7 @@ public class AccessConstraintService {
 						// fall-through
 					case Constants.ROLE_KLE_ADMINISTRATOR_ID:
 					case Constants.ROLE_ASSIGNER_ID:
+					case Constants.ROLE_REQUESTAUTHORIZED:
 						// these can be constrained, so let's examine them further
 						break;
 					default:
@@ -85,17 +93,17 @@ public class AccessConstraintService {
 				}
 
 				// only look at constraints of the relevant type
-				List<SystemRoleAssignmentConstraintValue> filteredConstraints = null;				
+				List<SystemRoleAssignmentConstraintValue> filteredConstraints = null;
 				if (systemRoleAssignment.getConstraintValues() != null) {
 					filteredConstraints = systemRoleAssignment
 						.getConstraintValues()
 						.stream()
 						.filter(c -> c.getConstraintType().getEntityId().equals(Constants.INTERNAL_ORGUNIT_CONSTRAINT_ENTITY_ID))
-						.collect(Collectors.toList());
+						.toList();
 				}
 
 				// unconstrained roles gives full access
-				if (filteredConstraints == null || filteredConstraints.size() == 0) {
+				if (filteredConstraints == null || filteredConstraints.isEmpty()) {
 					return null;
 				}
 
@@ -128,7 +136,7 @@ public class AccessConstraintService {
 				}
 			}
 		}
-		
+
 		// if (and only if) this is manager without read-access, we will add all the OUs for that manager
 		if (SecurityUtil.isManagerWithoutReadAccess()) {
 			List<OrgUnit> orgUnits = orgUnitService.getByManager(); // uses the currently logged in user internally
@@ -140,17 +148,17 @@ public class AccessConstraintService {
 
 		return new ArrayList<>(resultSet);
 	}
-	
+
 	// do not use from inside large loop, as the filterUsersUserCanEdit is expensive
 	public boolean isUserAccessable(User user, boolean writeAccessRequired) {
 		return (filterUsersUserCanAccess(Collections.singletonList(user), writeAccessRequired).size() > 0);
 	}
-	
+
 	public boolean isAssignmentAllowed(User user, UserRole userRole) {
 		if (!isUserAccessable(user, true)) {
 			return false;
 		}
-		
+
 		return (filterUserRolesUserCanAssign(Collections.singletonList(userRole)).size() > 0);
 	}
 
@@ -158,7 +166,7 @@ public class AccessConstraintService {
 		if (!isUserAccessable(user, true)) {
 			return false;
 		}
-		
+
 		return (filterRoleGroupsUserCanAssign(Collections.singletonList(roleGroup)).size() > 0);
 	}
 
@@ -166,7 +174,7 @@ public class AccessConstraintService {
 		if (!isOUAccessable(ou,false)) {
 			return false;
 		}
-		
+
 		return true;
 	}
 
@@ -188,10 +196,10 @@ public class AccessConstraintService {
 		if (!isOUAccessable(ou, true)) {
 			return false;
 		}
-		
+
 		return true;
 	}
-	
+
 	public boolean isKleAssignmentAllowed(User user) {
 		if (!isUserAccessable(user, true)) {
 			return false;
@@ -207,7 +215,7 @@ public class AccessConstraintService {
 
 		return (filterUserRolesUserCanAssign(Collections.singletonList(userRole)).size() > 0);
 	}
-	
+
 	public boolean isAssignmentAllowed(OrgUnit ou, RoleGroup roleGroup) {
 		if (!isOUAccessable(ou, true)) {
 			return false;
@@ -221,7 +229,7 @@ public class AccessConstraintService {
 		if (ous == null) {
 			return users; // no filtering
 		}
-		
+
 		List<User> result = new ArrayList<>();
 
 		if (ous.size() == 0) {
@@ -230,7 +238,7 @@ public class AccessConstraintService {
 
 		for (User user : users) {
 			List<OrgUnit> userOrgUnits = getUserOrgUnits(user);
-			
+
 			for (OrgUnit userOrgUnit : userOrgUnits) {
 				if (ous.contains(userOrgUnit.getUuid())) {
 					result.add(user);
@@ -241,7 +249,7 @@ public class AccessConstraintService {
 
 		return result;
 	}
-	
+
 	// null ==> no restriction on OrgUnits
 	// empty array => full restriction (i.e. no OrgUnits)
 	// list with elements => restricted to those OrgUnits
@@ -256,9 +264,9 @@ public class AccessConstraintService {
 		if (user == null) {
 			return new ArrayList<Long>(); // empty list, full restriction
 		}
-		
+
 		List<ItSystem> itSystems = itSystemService.findByIdentifier(Constants.ROLE_CATALOGUE_IDENTIFIER);
-		
+
 		List<UserRole> allRoles = userService.getAllUserRoles(user, itSystems);
 		Set<Long> resultSet = new HashSet<Long>();
 
@@ -311,7 +319,7 @@ public class AccessConstraintService {
 		if (itSystems == null) {
 			return roles; // no filtering
 		}
-		
+
 		if (itSystems.size() == 0) {
 			return new ArrayList<>(); // no access
 		}
@@ -326,7 +334,7 @@ public class AccessConstraintService {
 		if (itSystems == null) {
 			return roleGroups; // no filtering
 		}
-		
+
 		if (itSystems.size() == 0) {
 			return new ArrayList<>(); // no access
 		}
@@ -348,10 +356,119 @@ public class AccessConstraintService {
 
 		return result;
 	}
-	
+
+	public Map<String, List<String>> findOUAndITSystemConstraintsForSystemRoleInUserRole(UserRole userRole, SystemRole systemRole, UserWithRole usersWithRole) {
+		Map<String, List<String>> result = new HashMap<>();
+		User user = usersWithRole.getUser();
+		RoleAssignedToUserDTO assignment = usersWithRole.getAssignment();
+
+		SystemRoleAssignment systemRoleAssignment = userRole.getSystemRoleAssignments().stream().filter(sra -> sra.getSystemRole().getId() == systemRole.getId()).findAny().orElse(null);
+		if (systemRoleAssignment == null) {
+			return null;
+		}
+
+		// only look at constraints of the relevant type
+		List<SystemRoleAssignmentConstraintValue> ouConstraints = new ArrayList<>();
+		List<SystemRoleAssignmentConstraintValue> itSystemConstraints = new ArrayList<>();
+		if (systemRoleAssignment.getConstraintValues() != null) {
+			ouConstraints = systemRoleAssignment
+				.getConstraintValues()
+				.stream()
+				.filter(c -> c.getConstraintType().getEntityId().equals(Constants.INTERNAL_ORGUNIT_CONSTRAINT_ENTITY_ID))
+				.collect(Collectors.toList());
+			itSystemConstraints = systemRoleAssignment
+				.getConstraintValues()
+				.stream()
+				.filter(c -> c.getConstraintType().getEntityId().equals(Constants.INTERNAL_ITSYSTEM_CONSTRAINT_ENTITY_ID))
+				.collect(Collectors.toList());
+		}
+
+		// if constrained on OrgUnits, sum up (could be assigned the role multiple times)
+		Set<String> ouUuids = new HashSet<>();
+		for (SystemRoleAssignmentConstraintValue constraintValue : ouConstraints) {
+			ConstraintValueType constraintValueType = constraintValue.getConstraintValueType();
+
+			if (constraintValue.isPostponed()) {
+				UserUserRoleAssignment userUserRoleAssignment = user.getUserRoleAssignments().stream().filter(ura->ura.getId() == assignment.getAssignmentId()).findAny().orElse(null);
+				PostponedConstraint postponedConstraint = userUserRoleAssignment.getPostponedConstraints().stream().filter(p -> p.getSystemRole().getId() == systemRoleAssignment.getSystemRole().getId() && p.getConstraintType().getUuid().equals(constraintValue.getConstraintType().getUuid())).findAny().orElse(null);
+
+				if (postponedConstraint != null) {
+					String[] uuids = postponedConstraint.getValue().split(",");
+					ouUuids.addAll(Arrays.asList(uuids));
+				}
+			} else {
+				switch (constraintValueType) {
+					case INHERITED:
+						for (Position pos : user.getPositions()) {
+							ouUuids.add(pos.getOrgUnit().getUuid());
+						}
+
+						break;
+					case EXTENDED_INHERITED:
+						for (Position pos : user.getPositions()) {
+							getUuidsRecursive(ouUuids, pos.getOrgUnit());
+						}
+
+						break;
+					case VALUE:
+						for (String uuid : constraintValue.getConstraintValue().split(",")) {
+							ouUuids.add(uuid);
+						}
+
+						break;
+					default:
+						break;
+				}
+			}
+		}
+
+		Set<Long> itSystemIds = new HashSet<>();
+		for (SystemRoleAssignmentConstraintValue constraintValue : itSystemConstraints) {
+
+			if (constraintValue.isPostponed()) {
+				UserUserRoleAssignment userUserRoleAssignment = user.getUserRoleAssignments().stream().filter(ura->ura.getId() == assignment.getAssignmentId()).findAny().orElse(null);
+				PostponedConstraint postponedConstraint = userUserRoleAssignment.getPostponedConstraints().stream().filter(p -> p.getSystemRole().getId() == systemRoleAssignment.getSystemRole().getId() && p.getConstraintType().getUuid().equals(constraintValue.getConstraintType().getUuid())).findAny().orElse(null);
+
+				if (postponedConstraint != null) {
+					String[] ids = postponedConstraint.getValue().split(",");
+					for (String id : ids) {
+						itSystemIds.add(Long.parseLong(id));
+					}
+				}
+			} else {
+				String[] ids = constraintValue.getConstraintValue().split(",");
+				for (String id : ids) {
+					itSystemIds.add(Long.parseLong(id));
+				}
+			}
+		}
+
+		if (!ouUuids.isEmpty()) {
+			result.put("Enheder", new ArrayList<>());
+			for (String ouUuid : ouUuids) {
+				OrgUnit ou = orgUnitService.getByUuid(ouUuid);
+				if (ou != null) {
+					result.get("Enheder").add(ou.getName());
+				}
+			}
+		}
+
+		if (!itSystemIds.isEmpty()) {
+			result.put("It-systemer", new ArrayList<>());
+			for (Long itSystemId : itSystemIds) {
+				ItSystem itSystem = itSystemService.getById(itSystemId);
+				if (itSystem != null) {
+					result.get("It-systemer").add(itSystem.getName());
+				}
+			}
+		}
+
+		return result;
+	}
+
 	private void getUuidsRecursive(Set<String> uuids, OrgUnit orgUnit) {
 		uuids.add(orgUnit.getUuid());
-		
+
 		for (OrgUnit child : orgUnit.getChildren()) {
 			getUuidsRecursive(uuids, child);
 		}
@@ -365,15 +482,15 @@ public class AccessConstraintService {
 
 		return orgUnits;
 	}
-	
+
 	// do not use this method from a loop over all orgUnits, as the orgUnitsUserCanEdit call is expensive
 	private boolean isOUAccessable(OrgUnit orgUnit, boolean writeAccessRequired) {
 		List<String> ous = getConstrainedOrgUnits(writeAccessRequired);
-		
+
 		if (ous == null || ous.contains(orgUnit.getUuid())) {
 			return true;
 		}
-		
+
 		return false;
 	}
 }
