@@ -3,28 +3,25 @@ package dk.digitalidentity.rc.service;
 import dk.digitalidentity.rc.dao.RoleGroupDao;
 import dk.digitalidentity.rc.dao.model.RoleGroup;
 import dk.digitalidentity.rc.dao.model.RoleGroupUserRoleAssignment;
-import dk.digitalidentity.rc.dao.model.User;
 import dk.digitalidentity.rc.dao.model.UserRole;
 import dk.digitalidentity.rc.log.AuditLogIntercepted;
+import dk.digitalidentity.rc.rolerequest.model.enums.ApproverOption;
+import dk.digitalidentity.rc.rolerequest.model.enums.RequesterOption;
 import dk.digitalidentity.rc.security.SecurityUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Date;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 public class RoleGroupService {
 
-    @Autowired
-    private RoleGroupDao roleGroupDao;
-    
+	@Autowired
+	private RoleGroupDao roleGroupDao;
+
 	@AuditLogIntercepted
 	public boolean addUserRole(RoleGroup roleGroup, UserRole userRole) {
-      	if (!roleGroup.getUserRoleAssignments().stream().map(ura -> ura.getUserRole()).collect(Collectors.toList()).contains(userRole)) {
+		if (!roleGroup.getUserRoleAssignments().stream().map(RoleGroupUserRoleAssignment::getUserRole).toList().contains(userRole)) {
 			RoleGroupUserRoleAssignment assignment = new RoleGroupUserRoleAssignment();
 			assignment.setUserRole(userRole);
 			assignment.setRoleGroup(roleGroup);
@@ -41,10 +38,10 @@ public class RoleGroupService {
 
 	@AuditLogIntercepted
 	public boolean removeUserRole(RoleGroup roleGroup, UserRole userRole) {
-      	if (roleGroup.getUserRoleAssignments().stream().map(ura -> ura.getUserRole()).collect(Collectors.toList()).contains(userRole)) {
-			for (Iterator<RoleGroupUserRoleAssignment> iterator = roleGroup.getUserRoleAssignments().iterator(); iterator.hasNext();) {
+		if (roleGroup.getUserRoleAssignments().stream().map(RoleGroupUserRoleAssignment::getUserRole).toList().contains(userRole)) {
+			for (Iterator<RoleGroupUserRoleAssignment> iterator = roleGroup.getUserRoleAssignments().iterator(); iterator.hasNext(); ) {
 				RoleGroupUserRoleAssignment userRoleAssignment = iterator.next();
-				
+
 				if (userRoleAssignment.getUserRole().equals(userRole)) {
 					iterator.remove();
 				}
@@ -57,22 +54,19 @@ public class RoleGroupService {
 	}
 
 	@AuditLogIntercepted
-    public RoleGroup save(RoleGroup roleGroup) {
-        return roleGroupDao.save(roleGroup);
-    }
+	public RoleGroup save(RoleGroup roleGroup) {
+		return roleGroupDao.save(roleGroup);
+	}
 
 	@AuditLogIntercepted
-    public void delete(RoleGroup roleGroup) {
-        roleGroupDao.delete(roleGroup);
-    }
+	public void delete(RoleGroup roleGroup) {
+		roleGroupDao.delete(roleGroup);
+	}
 
 	public List<RoleGroup> getAll() {
 		return roleGroupDao.findAll();
 	}
 
-	public List<RoleGroup> getAllRequestable() {
-		return roleGroupDao.findByCanRequestTrue();
-	}
 
 	public RoleGroup getById(long roleGroupId) {
 		return roleGroupDao.findById(roleGroupId).orElse(null);
@@ -85,20 +79,11 @@ public class RoleGroupService {
 	public Optional<RoleGroup> getByName(String name) {
 		return roleGroupDao.findByName(name);
 	}
-	
-	public boolean canRequestRole(RoleGroup role, User user) {
-		if (!role.isCanRequest()) {
-			return false;
-		}
 
-		return true;
+	public List<RoleGroup> getRoleGroupsWithRequesterPermissions ( List<RequesterOption> permissions) {
+		return roleGroupDao.findByRequesterPermissionIn(permissions);
 	}
-	
-	public List<RoleGroup> whichRolesCanBeRequestedByUser(List<RoleGroup> roles, User user) {
-
-		// filter on canRequest
-		roles = roles.stream().filter(r -> r.isCanRequest()).collect(Collectors.toList());
-
-		return roles;
+	public List<RoleGroup> getRoleGroupsWithApproverPermissions ( List<ApproverOption> permissions) {
+		return roleGroupDao.findByApproverPermissionIn(permissions);
 	}
 }
