@@ -17,6 +17,7 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import dk.digitalidentity.rc.controller.mvc.datatables.dao.DatatablesUserDao;
+import dk.digitalidentity.rc.dao.OrgUnitUserRoleAssignmentDao;
 import dk.digitalidentity.rc.dao.model.enums.ContainsTitles;
 import org.apache.commons.lang3.StringEscapeUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,6 +34,7 @@ import org.springframework.util.StringUtils;
 
 import dk.digitalidentity.rc.config.Constants;
 import dk.digitalidentity.rc.config.RoleCatalogueConfiguration;
+import dk.digitalidentity.rc.controller.mvc.datatables.dao.DatatablesUserDao;
 import dk.digitalidentity.rc.controller.mvc.viewmodel.KleDTO;
 import dk.digitalidentity.rc.controller.mvc.viewmodel.OUListForm;
 import dk.digitalidentity.rc.controller.mvc.viewmodel.UserRoleNotAssignedDTO;
@@ -42,7 +44,6 @@ import dk.digitalidentity.rc.dao.RoleGroupDao;
 import dk.digitalidentity.rc.dao.UserDao;
 import dk.digitalidentity.rc.dao.UserRoleGroupAssignmentDao;
 import dk.digitalidentity.rc.dao.UserUserRoleAssignmentDao;
-import dk.digitalidentity.rc.dao.model.ConstraintType;
 import dk.digitalidentity.rc.dao.model.Domain;
 import dk.digitalidentity.rc.dao.model.ItSystem;
 import dk.digitalidentity.rc.dao.model.Kle;
@@ -54,7 +55,6 @@ import dk.digitalidentity.rc.dao.model.Position;
 import dk.digitalidentity.rc.dao.model.PositionRoleGroupAssignment;
 import dk.digitalidentity.rc.dao.model.PositionUserRoleAssignment;
 import dk.digitalidentity.rc.dao.model.PostponedConstraint;
-import dk.digitalidentity.rc.dao.model.RequestApprovePostponedConstraint;
 import dk.digitalidentity.rc.dao.model.RoleGroup;
 import dk.digitalidentity.rc.dao.model.RoleGroupUserRoleAssignment;
 import dk.digitalidentity.rc.dao.model.SystemRole;
@@ -68,6 +68,7 @@ import dk.digitalidentity.rc.dao.model.UserRoleGroupAssignment;
 import dk.digitalidentity.rc.dao.model.UserUserRoleAssignment;
 import dk.digitalidentity.rc.dao.model.enums.AltAccountType;
 import dk.digitalidentity.rc.dao.model.enums.ConstraintValueType;
+import dk.digitalidentity.rc.dao.model.enums.ContainsTitles;
 import dk.digitalidentity.rc.dao.model.enums.EventType;
 import dk.digitalidentity.rc.dao.model.enums.ItSystemType;
 import dk.digitalidentity.rc.dao.model.enums.KleType;
@@ -88,8 +89,6 @@ import dk.digitalidentity.rc.service.model.RoleAssignmentType;
 import dk.digitalidentity.rc.service.model.RoleGroupAssignedToUser;
 import dk.digitalidentity.rc.service.model.RoleGroupAssignmentWithInfo;
 import dk.digitalidentity.rc.service.model.RoleGroupWithAssignmentIdDTO;
-import dk.digitalidentity.rc.service.model.UserAssignedToRoleGroupDTO;
-import dk.digitalidentity.rc.service.model.UserAssignedToUserRoleDTO;
 import dk.digitalidentity.rc.service.model.UserRoleAssignedToUser;
 import dk.digitalidentity.rc.service.model.UserRoleAssignmentWithInfo;
 import dk.digitalidentity.rc.service.model.UserRoleWithAssignmentIdDTO;
@@ -147,6 +146,9 @@ public class UserService {
 	private PositionRoleGroupAssignmentDao positionRoleGroupAssignmentDao;
 
 	@Autowired
+	private OrgUnitUserRoleAssignmentDao orgUnitUserRoleAssignmentDao;
+
+	@Autowired
 	private UserService self;
 
 	@Autowired
@@ -154,6 +156,9 @@ public class UserService {
 
 	@Autowired
 	private DatatablesUserDao datatablesUserDao;
+
+	@Autowired
+	private SettingsService settingsService;
 
 	// dao methods
 
@@ -226,6 +231,10 @@ public class UserService {
 	@SuppressWarnings("deprecation")
 	public List<User> getByRoleGroupsIncludingInactive(RoleGroup role) {
 		return userDao.findByRoleGroupAssignmentsRoleGroup(role);
+	}
+
+	public List<User> getByRoleGroup(RoleGroup roleGroup) {
+		return userDao.findByDeletedFalseAndRoleGroupAssignmentsRoleGroupAndRoleGroupAssignmentsInactive(roleGroup, false);
 	}
 
 	@SuppressWarnings("deprecation")
@@ -451,35 +460,16 @@ public class UserService {
 		return false;
 	}
 
-	public void addUserRoleReqApprove(User user, UserRole userRole, List<RequestApprovePostponedConstraint> constraints, OrgUnit orgUnit) {
-		List<PostponedConstraint> postponedConstraintsForAssignment = new ArrayList<>();
-		for (RequestApprovePostponedConstraint requestConstraint : constraints) {
-			SystemRole systemRole = requestConstraint.getSystemRole();
-			ConstraintType constraintType = requestConstraint.getConstraintType();
-			if (systemRole == null || constraintType == null) {
-				continue;
-			}
-
-			PostponedConstraint postponedConstraint = new PostponedConstraint();
-			postponedConstraint.setConstraintType(constraintType);
-			postponedConstraint.setSystemRole(systemRole);
-			postponedConstraint.setValue(requestConstraint.getValue());
-
-			postponedConstraintsForAssignment.add(postponedConstraint);
-		}
-		self.addUserRole(user, userRole, null, null, postponedConstraintsForAssignment, orgUnit, true);
-	}
-
 	public void addUserRole(User user, UserRole userRole, LocalDate startDate, LocalDate stopDate) {
-		self.addUserRole(user, userRole, startDate, stopDate, null, null, true);
+		self.addUserRole(user, userRole, startDate, stopDate, null, null, true, null);
 	}
 
 	public void addUserRole(User user, UserRole userRole, LocalDate startDate, LocalDate stopDate, List<PostponedConstraint> postponedConstraints) {
-		self.addUserRole(user, userRole, startDate, stopDate, postponedConstraints, null, true);
+		self.addUserRole(user, userRole, startDate, stopDate, postponedConstraints, null, true, null);
 	}
 
 	@AuditLogIntercepted
-	public void addUserRole(User user, UserRole userRole, LocalDate startDate, LocalDate stopDate, List<PostponedConstraint> postponedConstraints, OrgUnit orgUnit, boolean notifyByEmail) {
+	public void addUserRole(User user, UserRole userRole, LocalDate startDate, LocalDate stopDate, List<PostponedConstraint> postponedConstraints, OrgUnit orgUnit, boolean notifyByEmail, String caseNumber) {
 		if (userRole.getItSystem().getIdentifier().equals(Constants.ROLE_CATALOGUE_IDENTIFIER)
 				&& !SecurityUtil.getRoles().contains(Constants.ROLE_ADMINISTRATOR)
 				&& !SecurityUtil.getRoles().contains(Constants.ROLE_SYSTEM)) {
@@ -498,6 +488,7 @@ public class UserService {
 		assignment.setInactive(startDate != null ? startDate.isAfter(LocalDate.now()) : false);
 		assignment.setStopDateUser(userId);
 		assignment.setNotifyByEmailIfManualSystem(notifyByEmail);
+		assignment.setCaseNumber(caseNumber);
 
 		List<OrgUnit> orgUnits = orgUnitService.getOrgUnitsForUser(user);
 
@@ -524,16 +515,16 @@ public class UserService {
 
 	@AuditLogIntercepted
 	public void editUserRoleAssignment(User user, UserUserRoleAssignment userRoleAssignment, LocalDate startDate, LocalDate stopDate) {
-		editUserRoleAssignment(user, userRoleAssignment, startDate, stopDate, null, null);
+		editUserRoleAssignment(user, userRoleAssignment, startDate, stopDate, null, null, null);
 	}
 
 	@AuditLogIntercepted
 	public void editUserRoleAssignment(User user, UserUserRoleAssignment userRoleAssignment, LocalDate startDate, LocalDate stopDate, List<PostponedConstraint> postponedConstraints) {
-		editUserRoleAssignment(user, userRoleAssignment, startDate, stopDate, postponedConstraints, null);
+		editUserRoleAssignment(user, userRoleAssignment, startDate, stopDate, postponedConstraints, null, null);
 	}
 
 	@AuditLogIntercepted
-	public void editUserRoleAssignment(User user, UserUserRoleAssignment userRoleAssignment, LocalDate startDate, LocalDate stopDate, List<PostponedConstraint> postponedConstraints, OrgUnit orgUnit) {
+	public void editUserRoleAssignment(User user, UserUserRoleAssignment userRoleAssignment, LocalDate startDate, LocalDate stopDate, List<PostponedConstraint> postponedConstraints, OrgUnit orgUnit, String caseNumber) {
 		if (userRoleAssignment.getUserRole().getItSystem().getIdentifier().equals(Constants.ROLE_CATALOGUE_IDENTIFIER)
 				&& !SecurityUtil.getRoles().contains(Constants.ROLE_ADMINISTRATOR)
 				&& !SecurityUtil.getRoles().contains(Constants.ROLE_SYSTEM)) {
@@ -543,6 +534,7 @@ public class UserService {
 		userRoleAssignment.setStartDate((startDate == null || LocalDate.now().equals(startDate)) ? null : startDate);
 		userRoleAssignment.setStopDate(stopDate);
 		userRoleAssignment.setInactive(startDate != null ? startDate.isAfter(LocalDate.now()) : false);
+		userRoleAssignment.setCaseNumber(caseNumber);
 
 		String userId = SecurityUtil.getUserId();
 		userRoleAssignment.setStopDateUser(userId);
@@ -656,35 +648,6 @@ public class UserService {
 		}
 
 		return "C=DK,O=" + configuration.getCustomer().getCvr() + ",CN=" + user.getName() + ",Serial=" + user.getExtUuid();
-	}
-
-	/**
-	 * Returns all assigned system roles, no matter how they are assigned to the user
-	 */
-	public List<SystemRole> getAllSystemRoles(User user, List<ItSystem> itSystems) {
-		List<UserRole> userRoles = getAllUserRoles(user, itSystems);
-
-		Set<SystemRole> systemRoles = new HashSet<>();
-		for (UserRole userRole : userRoles) {
-			systemRoles.addAll(userRole.getSystemRoleAssignments()
-					.stream()
-					.map(sra -> sra.getSystemRole())
-					.collect(Collectors.toList()));
-		}
-
-		return new ArrayList<>(systemRoles);
-	}
-
-	/**
-	 * Returns all UserRoles, no matter how they are assigned to the user
-	 */
-	public List<UserRole> getAllUserRoles(String userId, Domain domain, List<ItSystem> itSystems) throws UserNotFoundException {
-		User user = userDao.findByUserIdAndDomainAndDeletedFalse(userId, domain).orElse(null);
-		if (user == null) {
-			throw new UserNotFoundException("User with userId '" + userId + "' was not found in the database");
-		}
-
-		return getAllUserRoles(user, itSystems);
 	}
 
 	/**
@@ -989,10 +952,10 @@ public class UserService {
 				// position.title (userRoles)
 
 				List<OrgUnitUserRoleAssignment> assignments = position.getOrgUnit().getUserRoleAssignments()
-						.stream()
-						.filter(ura -> (ura.getContainsTitles() == ContainsTitles.POSITIVE && ura.getTitles().contains(position.getTitle()))
-								|| (ura.getContainsTitles() == ContainsTitles.NEGATIVE && !ura.getTitles().contains(position.getTitle())))
-						.toList();
+					.stream()
+					.filter(ura -> (ura.getContainsTitles() == ContainsTitles.POSITIVE && ura.getTitles().contains(position.getTitle()))
+                        || (ura.getContainsTitles() == ContainsTitles.NEGATIVE && !ura.getTitles().contains(position.getTitle())))
+					.toList();
 
 				for (OrgUnitUserRoleAssignment assignment : assignments) {
 					if (assignment.isInactive()) {
@@ -1059,27 +1022,27 @@ public class UserService {
 		List<RoleAssignedToUserDTO> result = new ArrayList<>();
 
 		// user.getUserRoles()
-		List<UserUserRoleAssignment> userRoleAssignments = user.getUserRoleAssignments().stream().collect(Collectors.toList());
+		List<UserUserRoleAssignment> userRoleAssignments = user.getUserRoleAssignments().stream().toList();
 
-		result.addAll(userRoleAssignments.stream().map(RoleAssignedToUserDTO::fromUserRoleAssignment).collect(Collectors.toList()));
+		result.addAll(userRoleAssignments.stream().map(RoleAssignedToUserDTO::fromUserRoleAssignment).toList());
 
 		// user.getRoleGroups()
-		List<UserRoleGroupAssignment> roleGroupAssignments = user.getRoleGroupAssignments().stream().collect(Collectors.toList());
+		List<UserRoleGroupAssignment> roleGroupAssignments = user.getRoleGroupAssignments().stream().toList();
 
-		result.addAll(roleGroupAssignments.stream().map(RoleAssignedToUserDTO::fromRoleGroupAssignment).collect(Collectors.toList()));
+		result.addAll(roleGroupAssignments.stream().map(RoleAssignedToUserDTO::fromRoleGroupAssignment).toList());
 
 		// user.getPositions() -> everything assigned through these
 		for (Position position : user.getPositions()) {
 
 			// position.getRoles();
-			List<PositionUserRoleAssignment> pur = position.getUserRoleAssignments().stream().collect(Collectors.toList());
+			List<PositionUserRoleAssignment> pur = position.getUserRoleAssignments().stream().toList();
 
-			result.addAll(pur.stream().map(RoleAssignedToUserDTO::fromPositionUserRoleAssignment).collect(Collectors.toList()));
+			result.addAll(pur.stream().map(RoleAssignedToUserDTO::fromPositionUserRoleAssignment).toList());
 
 			// position.getRoleGroups
-			List<PositionRoleGroupAssignment> prg = position.getRoleGroupAssignments().stream().collect(Collectors.toList());
+			List<PositionRoleGroupAssignment> prg = position.getRoleGroupAssignments().stream().toList();
 
-			result.addAll(prg.stream().map(RoleAssignedToUserDTO::fromPositionRoleGroupAssignment).collect(Collectors.toList()));
+			result.addAll(prg.stream().map(RoleAssignedToUserDTO::fromPositionRoleGroupAssignment).toList());
 
 			if (!position.isDoNotInherit()) {
 				// recursive through all OrgUnits from here and up
@@ -1118,6 +1081,9 @@ public class UserService {
 
 		// ou.getRoles()
 		for (OrgUnitUserRoleAssignment roleMapping : orgUnit.getUserRoleAssignments()) {
+			if(result.stream().anyMatch(dto -> dto.getAssignmentId() == roleMapping.getId())) {
+				continue;
+			}
 
 			if (inheritOnly && !roleMapping.isInherit()) {
 				continue;
@@ -1152,6 +1118,9 @@ public class UserService {
 
 		// ou.getRoleGroups()
 		for (OrgUnitRoleGroupAssignment roleGroupMapping : orgUnit.getRoleGroupAssignments()) {
+			if(result.stream().anyMatch(dto -> dto.getAssignmentId() == roleGroupMapping.getId())) {
+				continue;
+			}
 
 			if (inheritOnly && !roleGroupMapping.isInherit()) {
 				continue;
@@ -1303,8 +1272,8 @@ public class UserService {
 			// position.getRoleGroups
 			List<RoleGroupWithAssignmentIdDTO> prg = position.getRoleGroupAssignments().stream()
 					.filter(ura -> !ura.isInactive())
-					.map(ura -> new RoleGroupWithAssignmentIdDTO(ura))
-					.collect(Collectors.toList());
+	      			.map(ura -> new RoleGroupWithAssignmentIdDTO(ura))
+	      			.collect(Collectors.toList());
 
 			for (RoleGroupWithAssignmentIdDTO roleGroupWithId : prg) {
 				RoleGroup roleGroup = roleGroupWithId.getRoleGroup();
@@ -1568,6 +1537,7 @@ public class UserService {
 			mapping.setUserName(assignment.getUser().getName());
 			mapping.setUserUserId(assignment.getUser().getUserId());
 			mapping.setUserUuid(assignment.getUser().getUuid());
+			mapping.setUserUuid(assignment.getUser().getExtUuid());
 			mapping.setAssignment(RoleAssignedToUserDTO.fromRoleGroupAssignment(assignment));
 			mapping.getAssignment().setCanEdit(canEdit);
 			mapping.setPositions(assignment.getUser().getPositions());
@@ -1576,16 +1546,17 @@ public class UserService {
 		}
 
 		for (PositionRoleGroupAssignment assignment : positionRoleGroupAssignmentDao.findByRoleGroup(roleGroup)) {
-			if (assignment.getPosition().getUser().isDeleted()) {
+			User user = assignment.getPosition().getUser();
+			if (user.isDeleted()) {
 				continue;
 			}
 			UserWithRole2 mapping = new UserWithRole2();
-			mapping.setUserName(assignment.getPosition().getUser().getName());
-			mapping.setUserUserId(assignment.getPosition().getUser().getUserId());
-			mapping.setUserUuid(assignment.getPosition().getUser().getUuid());
+			mapping.setUserName(user.getName());
+			mapping.setUserUserId(user.getUserId());
+			mapping.setUserUuid(user.getUuid());
 			mapping.setAssignment(RoleAssignedToUserDTO.fromPositionRoleGroupAssignment(assignment));
 			mapping.getAssignment().setCanEdit(canEdit);
-			mapping.setPositions(assignment.getPosition().getUser().getPositions());
+			mapping.setPositions(user.getPositions());
 
 			result.add(mapping);
 		}
@@ -1599,31 +1570,33 @@ public class UserService {
 		boolean canEdit = SecurityUtil.getRoles().contains(Constants.ROLE_ADMINISTRATOR);
 
 		for (UserUserRoleAssignment assignment : userUserRoleAssignmentDao.findByUserRole(userRole)) {
-			if (assignment.getUser().isDeleted()) {
+			User user = assignment.getUser();
+			if (user.isDeleted()) {
 				continue;
 			}
 			UserWithRole2 mapping = new UserWithRole2();
-			mapping.setUserName(assignment.getUser().getName());
-			mapping.setUserUserId(assignment.getUser().getUserId());
-			mapping.setUserUuid(assignment.getUser().getUuid());
+			mapping.setUserName(user.getName());
+			mapping.setUserUserId(user.getUserId());
+			mapping.setUserUuid(user.getUuid());
 			mapping.setAssignment(RoleAssignedToUserDTO.fromUserRoleAssignment(assignment));
 			mapping.getAssignment().setCanEdit(canEdit);
-			mapping.setPositions(assignment.getUser().getPositions());
+			mapping.setPositions(user.getPositions());
 
 			result.add(mapping);
 		}
 
 		for (PositionUserRoleAssignment assignment : positionUserRoleAssignmentDao.findByUserRole(userRole)) {
-			if (assignment.getPosition().getUser().isDeleted()) {
+			User user = assignment.getPosition().getUser();
+			if (user.isDeleted()) {
 				continue;
 			}
 			UserWithRole2 mapping = new UserWithRole2();
-			mapping.setUserName(assignment.getPosition().getUser().getName());
-			mapping.setUserUserId(assignment.getPosition().getUser().getUserId());
-			mapping.setUserUuid(assignment.getPosition().getUser().getUuid());
+			mapping.setUserName(user.getName());
+			mapping.setUserUserId(user.getUserId());
+			mapping.setUserUuid(user.getUuid());
 			mapping.setAssignment(RoleAssignedToUserDTO.fromPositionUserRoleAssignment(assignment));
 			mapping.getAssignment().setCanEdit(canEdit);
-			mapping.setPositions(assignment.getPosition().getUser().getPositions());
+			mapping.setPositions(user.getPositions());
 
 			result.add(mapping);
 		}
@@ -1687,24 +1660,24 @@ public class UserService {
 					mapping.setAssignment(RoleAssignedToUserDTO.fromPositionUserRoleAssignment(assignment));
 					mapping.getAssignment().setCanEdit(false);
 
-					result.add(mapping);
-				}
+                        result.add(mapping);
+                }
 
 //				// get positions that have roleGroup assigned
-				for (RoleGroup roleGroup : roleGroups) {
-					for (PositionRoleGroupAssignment assignment : positionRoleGroupAssignmentDao.findByRoleGroup(roleGroup)) {
-						if (assignment.getPosition().getUser().isDeleted()) {
-							continue;
-						}
-						UserWithRole mapping = new UserWithRole();
-						mapping.setUser(assignment.getPosition().getUser());
-						mapping.setAssignedThrough(AssignedThrough.POSITION);
-						mapping.setAssignment(RoleAssignedToUserDTO.fromPositionRoleGroupAssignment(assignment));
-						mapping.getAssignment().setCanEdit(false);
+                for (RoleGroup roleGroup : roleGroups) {
+                    for (PositionRoleGroupAssignment assignment : positionRoleGroupAssignmentDao.findByRoleGroup(roleGroup)) {
+                        if (assignment.getPosition().getUser().isDeleted()) {
+                            continue;
+                        }
+                        UserWithRole mapping = new UserWithRole();
+                        mapping.setUser(assignment.getPosition().getUser());
+                        mapping.setAssignedThrough(AssignedThrough.POSITION);
+                        mapping.setAssignment(RoleAssignedToUserDTO.fromPositionRoleGroupAssignment(assignment));
+                        mapping.getAssignment().setCanEdit(false);
 
-						result.add(mapping);
-					}
-				}
+                        result.add(mapping);
+                    }
+                }
 			}
 
 			// get ous that have userRole assigned
@@ -1823,76 +1796,13 @@ public class UserService {
 		return result;
 	}
 
-
-	public List<UserAssignedToUserRoleDTO> getUserAssignmentsWithUserRoleDirectlyAssigned(UserRole userRole) {
-		List<UserAssignedToUserRoleDTO> result = new ArrayList<>();
-
-		// this we ALWAYS need to do
-		@SuppressWarnings("deprecation") // ok, it is for UI
-		List<User> userRoleUsers = userDao.findByDeletedFalseAndUserRoleAssignmentsUserRole(userRole);
-		for (User user : userRoleUsers.stream().distinct().collect(Collectors.toList())) {
-			List<UserUserRoleAssignment> userRoleAssignments = user.getUserRoleAssignments().stream().filter(a -> a.getUserRole().equals(userRole)).collect(Collectors.toList());
-			for (UserUserRoleAssignment userUserRoleAssignment : userRoleAssignments) {
-				UserAssignedToUserRoleDTO mapping = new UserAssignedToUserRoleDTO();
-				mapping.setUser(user);
-				mapping.setAssignedThrough(AssignedThrough.DIRECT);
-				mapping.setAssignmentId(userUserRoleAssignment.getId());
-				mapping.setCanEdit(false);
-				mapping.setStartDate(userUserRoleAssignment.getStartDate());
-				mapping.setStopDate(userUserRoleAssignment.getStopDate());
-
-				result.add(mapping);
-			}
+	public boolean isVikar(String userId) {
+		String vikarRegEx = settingsService.getVikarRegEx();
+		if (StringUtils.hasLength(userId) && StringUtils.hasLength(vikarRegEx)) {
+			return userId.toLowerCase().matches(vikarRegEx);
 		}
 
-		// get rolegroups that have the userrole included
-		List<RoleGroup> roleGroups = roleGroupDao.findByUserRoleAssignmentsUserRole(userRole);
-
-		// get users that have roleGroup assigned
-		for (RoleGroup roleGroup : roleGroups) {
-			@SuppressWarnings("deprecation") // ok, it is for UI
-			List<User> roleGroupUsers = userDao.findByDeletedFalseAndRoleGroupAssignmentsRoleGroup(roleGroup);
-			for (User user : roleGroupUsers.stream().distinct().collect(Collectors.toList())) {
-				List<UserRoleGroupAssignment> roleGroupAssignments = user.getRoleGroupAssignments().stream().filter(a -> a.getRoleGroup().equals(roleGroup)).collect(Collectors.toList());
-				for (UserRoleGroupAssignment userRoleGroupAssignment : roleGroupAssignments) {
-					UserAssignedToUserRoleDTO mapping = new UserAssignedToUserRoleDTO();
-					mapping.setUser(user);
-					mapping.setAssignedThrough(AssignedThrough.ROLEGROUP);
-					mapping.setAssignmentId(userRoleGroupAssignment.getId());
-					mapping.setCanEdit(false);
-					mapping.setStartDate(userRoleGroupAssignment.getStartDate());
-					mapping.setStopDate(userRoleGroupAssignment.getStopDate());
-
-					result.add(mapping);
-				}
-			}
-		}
-
-		return result;
-	}
-
-	public List<UserAssignedToRoleGroupDTO> getUserAssignmentsWithRoleGroupDirectlyAssigned(RoleGroup roleGroup) {
-		List<UserAssignedToRoleGroupDTO> result = new ArrayList<>();
-
-		// this we ALWAYS need to do
-		@SuppressWarnings("deprecation") // ok, it is for UI
-		List<User> userRoleUsers = userDao.findByDeletedFalseAndRoleGroupAssignmentsRoleGroup(roleGroup);
-		for (User user : userRoleUsers.stream().distinct().collect(Collectors.toList())) {
-			List<UserRoleGroupAssignment> roleGroupAssignments = user.getRoleGroupAssignments().stream().filter(a -> a.getRoleGroup().equals(roleGroup)).collect(Collectors.toList());
-			for (UserRoleGroupAssignment roleGroupAssignment : roleGroupAssignments) {
-				UserAssignedToRoleGroupDTO mapping = new UserAssignedToRoleGroupDTO();
-				mapping.setUser(user);
-				mapping.setAssignedThrough(AssignedThrough.DIRECT);
-				mapping.setAssignmentId(roleGroupAssignment.getId());
-				mapping.setCanEdit(false);
-				mapping.setStartDate(roleGroupAssignment.getStartDate());
-				mapping.setStopDate(roleGroupAssignment.getStopDate());
-
-				result.add(mapping);
-			}
-		}
-
-		return result;
+		return false;
 	}
 
 	public List<UserWithRoleAndDates> getUsersWithUserRoleDirectlyAssigned(UserRole userRole) {
@@ -1936,33 +1846,12 @@ public class UserService {
 		return result;
 	}
 
-	public List<UserWithRoleAndDates> getUsersWithRoleGroupDirectlyAssigned(RoleGroup roleGroup) {
-		List<UserWithRoleAndDates> result = new ArrayList<>();
-
-		// this we ALWAYS need to do
-		@SuppressWarnings("deprecation") // ok, it is for UI
-		List<User> userRoleUsers = userDao.findByDeletedFalseAndRoleGroupAssignmentsRoleGroup(roleGroup);
-		for (User user : userRoleUsers) {
-			UserWithRoleAndDates mapping = new UserWithRoleAndDates();
-			mapping.setUser(user);
-			mapping.setAssignedThrough(AssignedThrough.DIRECT);
-			//There should only be one
-			UserRoleGroupAssignment roleGroupAssignment = user.getRoleGroupAssignments().stream().filter(a -> a.getRoleGroup().equals(roleGroup)).findFirst().orElse(null);
-			if (roleGroupAssignment != null) {
-				mapping.setStartDate(roleGroupAssignment.getStartDate());
-				mapping.setStopDate(roleGroupAssignment.getStopDate());
-			}
-			result.add(mapping);
-		}
-		return result;
-	}
-
 	private List<UserWithRole> getUserRoleMappingsRecursive(List<OrgUnit> children, RoleAssignedToUserDTO inheritedAssignmentDTO, AssignedThrough assignedThrough) {
 		List<UserWithRole> result = new ArrayList<>();
 
 		if (children != null) {
 			for (OrgUnit child : children) {
-				if (!child.isActive()) {
+				if (!orgUnitService.isActiveAndIncluded(child)) {
 					continue;
 				}
 
@@ -2004,7 +1893,6 @@ public class UserService {
 		return false;
 	}
 
-	@Deprecated
 	public List<UserWithRole> getUsersWithRoleGroup(RoleGroup roleGroup, boolean findIndirectlyAssignedRoleGroups) {
 		List<UserWithRole> result = new ArrayList<>();
 
@@ -2084,8 +1972,8 @@ public class UserService {
 							mapping.setUser(position.getUser());
 							mapping.setAssignedThrough(AssignedThrough.ORGUNIT);
 
-							mapping.setAssignment(RoleAssignedToUserDTO.fromOrgUnitRoleGroupAssignment(orgUnitRoleGroupAssignment));
-							mapping.getAssignment().setCanEdit(false);
+                            mapping.setAssignment(RoleAssignedToUserDTO.fromOrgUnitRoleGroupAssignment(orgUnitRoleGroupAssignment));
+                            mapping.getAssignment().setCanEdit(false);
 
 							result.add(mapping);
 						}
@@ -2235,7 +2123,7 @@ public class UserService {
 								if (userRoleWithPostponedConstraints.getPostponedConstraints() != null) {
 									for (PostponedConstraint postponedConstraint : userRoleWithPostponedConstraints.getPostponedConstraints()) {
 										if (postponedConstraint.getConstraintType().getId() == constraint.getConstraintType().getId() &&
-												postponedConstraint.getSystemRole().getId() == constraint.getSystemRoleAssignment().getSystemRole().getId()) {
+											postponedConstraint.getSystemRole().getId() == constraint.getSystemRoleAssignment().getSystemRole().getId()) {
 
 											constraintValue.append(postponedConstraint.getValue());
 										}
@@ -2369,7 +2257,7 @@ public class UserService {
 		return builder.toString();
 	}
 
-	private static String getOrganisationConstraint(User user, ConstraintValueType constraintValueType) {
+	private String getOrganisationConstraint(User user, ConstraintValueType constraintValueType) {
 		Set<String> result = new HashSet<>();
 
 		for (Position position : user.getPositions()) {
@@ -2437,7 +2325,7 @@ public class UserService {
 		return String.join(",", result);
 	}
 
-	private static String getOrganisationConstraint(User user, boolean extended) {
+	private String getOrganisationConstraint(User user, boolean extended) {
 		Set<String> result = new HashSet<>();
 
 		for (Position position : user.getPositions()) {
@@ -2453,15 +2341,15 @@ public class UserService {
 		return String.join(",", result);
 	}
 
-	private static void appendThisAndChildren(OrgUnit orgUnit, Set<String> result) {
+	private void appendThisAndChildren(OrgUnit orgUnit, Set<String> result) {
 		result.add(orgUnit.getUuid());
 
 		appendChildren(orgUnit, result);
 	}
 
-	private static void appendChildren(OrgUnit orgUnit, Set<String> result) {
+	private void appendChildren(OrgUnit orgUnit, Set<String> result) {
 		for (OrgUnit child : orgUnit.getChildren()) {
-			if (!child.isActive()) {
+			if (!orgUnitService.isActiveAndIncluded(child)) {
 				continue;
 			}
 
